@@ -1,0 +1,3 @@
+r
+p @a
+quit
