@@ -1,0 +1,14 @@
+Starting program:
+a[0][1] = 1
+a[0][2] = 2
+a[0][3] = 3
+a[1][1] = 1
+a[1][2] = 2
+a[1][3] = 3
+Program exited normally with exit value: 0
+a["0"]["1"] = "1"
+a["0"]["2"] = "2"
+a["0"]["3"] = "3"
+a["1"]["1"] = "1"
+a["1"]["2"] = "2"
+a["1"]["3"] = "3"
