@@ -1,3 +1,8 @@
+2023-12-24         Arnold D. Robbins     <arnold@skeeve.com>
+
+	* Makefile.am (EXTRA_DIST): New test: dbugarray3.
+	* dbugarray3.awk, dbugarray3.in, dbugarray3.ok: New files.
+
 2023-12-21         Arnold D. Robbins     <arnold@skeeve.com>
 
 	* Makefile.am (EXTRA_DIST): New test: dbugarray2.
